--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <link rel="stylesheet" href="./styles/style.css">
 </head>
 <body>
+  
+  <!--this is a nav bar section-->
+
 <header>
 <nav>
 <div class="menu-container">
@@ -30,7 +33,21 @@
   
 
   <main>
+  <!--This is a banner section-->  
 
+  <section>
+    <div class="banner-container">
+<div class="banner-text">
+  <h1 class="title"> Better design for<br> your digital products</h1>
+  <p class ="description">We are a creative studio specializing in UI/UX</p>
+  <button class="btn">Explore More</button>
+</div>
+<div class="banner-photo">
+  <img class= "banner-img" src="./images/banner.png" alt="">
+</div>
+    </div>
+
+  </section>
   </main>
 
   <footer>
