--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
     </div>
 
   </section>
+
+  <!--This is about US section-->
+  <section>
+    <h1 class="about-title">About Us</h1>
+    <div class="about-container">
+      <div class="about-info">
+        <h1>We grow brands through bold and strategic creative</h1>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing.</p>
+        <button class="btn">Contact Us</button>
+
+      </div>
+
+      <div class="about-photo">
+        <img class = "banner-img" src="images/section.png" alt="">
+      </div>
+    </div>
+
+  </section>
   </main>
 
   <footer>
